<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<LinearLayout android:layout_width="fill_parent"
		android:id="@+id/LinearLayout03" android:layout_height="match_parent">
		<TextView android:textSize="18dip" android:layout_width="wrap_content"
			android:id="@+id/TextView03" android:layout_height="wrap_content"
			android:text="@string/top"></TextView>
		<EditText android:layout_weight="1"
			android:layout_marginRight="4dip" android:layout_marginLeft="4dip"
			android:numeric="signed" android:autoText="false"
			android:layout_width="fill_parent" android:textSize="18dip"
			android:layout_height="wrap_content" android:inputType="numberSigned"
			android:id="@+id/topMarginEditText">
		</EditText>
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:id="@+id/LinearLayout02" android:layout_height="match_parent">
		<TextView android:textSize="18dip" android:layout_width="wrap_content"
			android:id="@+id/TextView02" android:layout_height="wrap_content"
			android:text="@string/left"></TextView>
		<EditText android:layout_weight="1"
			android:layout_marginRight="4dip" android:layout_marginLeft="4dip"
			android:numeric="signed" android:autoText="false"
			android:layout_width="fill_parent" android:textSize="18dip"
			android:layout_height="wrap_content" android:inputType="numberSigned"
			android:id="@+id/leftMarginEditText">
		</EditText>
	</LinearLayout>
	<LinearLayout android:layout_height="match_parent"
		android:layout_width="fill_parent" android:id="@+id/linearLayout2">
		<TextView android:id="@+id/textView3" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textSize="18dip"
			android:text="@string/right"></TextView>
		<EditText android:text="" android:layout_marginRight="4dip"
			android:layout_width="fill_parent" android:autoText="false"
			android:textSize="18dip" android:layout_height="wrap_content"
			android:inputType="numberSigned" android:numeric="signed"
			android:layout_marginLeft="4dip" android:id="@+id/rightMarginEditText"></EditText>
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="match_parent" android:id="@+id/LinearLayout01">
		<TextView android:id="@+id/TextView01" android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:textSize="18dip"
			android:text="@string/bottom"></TextView>
		<EditText android:autoText="false"
			android:layout_marginRight="4dip" android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:textSize="18dip"
			android:numeric="signed" android:inputType="numberSigned"
			android:layout_marginLeft="4dip" android:id="@+id/bottomMarginEditText"></EditText>
	</LinearLayout>
</LinearLayout>
