<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical">
    <LinearLayout android:id="@+id/linearLayout3" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView3" android:text="@string/activity_name"></TextView>
        <EditText android:maxLength="20" android:layout_width="match_parent" android:text="" android:layout_height="wrap_content" android:inputType="textNoSuggestions" android:id="@+id/new_act_name"></EditText>
    </LinearLayout>    
    <LinearLayout android:id="@+id/linearLayout5" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView2" android:gravity="center|center_vertical" android:text="@string/screen_size"></TextView>
        <Spinner android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_gravity="top" android:layout_marginLeft="20dip" android:id="@+id/new_act_size"></Spinner>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/LinearLayout01" android:orientation="horizontal">
        <TextView android:id="@+id/TextView01" android:layout_height="wrap_content" android:gravity="center|center_vertical" android:layout_width="wrap_content" android:text="@string/main_layout_type_label"></TextView>
        <Spinner android:layout_weight="1" android:layout_marginLeft="20dip" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_gravity="top" android:id="@+id/layout_types_spinner"></Spinner>
    </LinearLayout>
</LinearLayout>
